--- a/Delta/Base.lproj/PauseMenu.storyboard
+++ b/Delta/Base.lproj/PauseMenu.storyboard
@@ -109,13 +109,12 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Paused" id="rY7-Wx-NaD">
-                        <barButtonItem key="leftBarButtonItem" title="Main Menu" style="done" id="2yt-vB-uMF">
-                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <barButtonItem key="leftBarButtonItem" title="Main Menu" image="house" catalog="system" style="plain" id="2yt-vB-uMF">
                             <connections>
                                 <segue destination="WU3-gG-BA5" kind="unwind" identifier="unwindToGames" unwindAction="unwindFromPauseViewController:" id="SdW-CX-n27"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Resume" style="done" id="Wfq-I3-437">
+                        <barButtonItem key="rightBarButtonItem" image="play" catalog="system" style="done" id="Wfq-I3-437">
                             <connections>
                                 <segue destination="WU3-gG-BA5" kind="unwind" identifier="unwindFromPauseMenu" unwindAction="unwindFromPauseViewController:" id="RHb-pF-trg"/>
                             </connections>
@@ -123,6 +122,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="closeButton" destination="2yt-vB-uMF" id="PYO-3x-9yw"/>
+                        <outlet property="resumeButton" destination="Wfq-I3-437" id="gur-51-muX"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Fb-9R-sRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -374,7 +374,7 @@
                                 <segue destination="d4f-Cp-p2b" kind="unwind" identifier="unwindEditCheatSegue" unwindAction="unwindFromEditCheatViewController:" id="rC5-FR-JoB"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="C7k-Kp-CF3">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="C7k-Kp-CF3">
                             <connections>
                                 <action selector="saveCheat:" destination="jTR-Oe-YUJ" id="Goi-Ob-IUg"/>
                             </connections>
@@ -395,6 +395,8 @@
     </scenes>
     <resources>
         <image name="ellipsis.circle" catalog="system" width="128" height="123"/>
+        <image name="house" catalog="system" width="128" height="104"/>
+        <image name="play" catalog="system" width="120" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
