--- a/Delta/Base.lproj/Settings.storyboard
+++ b/Delta/Base.lproj/Settings.storyboard
@@ -1067,7 +1067,7 @@ Menu + Long-Press: Quick Load</string>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Settings" largeTitleDisplayMode="always" id="DYU-tO-Lmw">
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="UdW-1j-fSz">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="UdW-1j-fSz">
                             <connections>
                                 <segue destination="slQ-xv-zI1" kind="unwind" identifier="unwindSettingsSegue" unwindAction="unwindFromSettingsViewController:" id="7gb-Bj-XU3"/>
                             </connections>
